--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -5,36 +5,71 @@
 .home {
   background-image: url("../../assets/Images/image1.jpg");
   display: flex;
+  flex-direction: column;
   position: relative;
   background-size: cover;
   background-position: center;
   color: $Primary-White;
   text-align: center;
-  padding: 50px;
-  height: 190px;
   width: 100vw;
+  padding-top: 7.5rem;
   h1,
   p {
-    text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
+    text-shadow: 3px 3px 16px rgba(0, 0, 0, 0.7);
+  }
+  @include desktop {
+    width: 100vw;
+    padding-top: 17.5rem;
+  }
+}
+.main-title {
+  @include desktop {
+    font-size: 3.5rem;
+  }
+}
+.main-subtitle {
+  @include desktop {
+    font-size: 1.5rem;
+  }
+}
+.main-content {
+  height: 220px;
+  @include desktop {
+    height: 23rem;
   }
 }
 
 .start-button {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #ff4500; // 橘红色背景
-  color: white;
+  background-color: $Primary-Orange;
+  color: $Primary-White;
   text-align: center;
   border-radius: 5px;
-  text-decoration: none; // 去除下划线
+  text-decoration: none;
   font-weight: bold;
   transition: background-color 0.3s ease;
 
   &:hover {
-    background-color: #e03e10; // 鼠标悬停时变暗
+    background-color: $Secondary-Orange;
   }
 
   &:active {
-    background-color: #c92a00; // 点击时更暗
+    background-color: $Supporting-Orange;
+  }
+  @include desktop {
+    font-size: 2rem;
+  }
+}
+.home__intro {
+  padding: 1rem;
+  color: $Primary-Black;
+  background-color: $Primary-White;
+  h2,
+  p {
+    text-shadow: 0 0 0;
+  }
+  @include desktop {
+    margin-top: 10rem;
   }
 }
