--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -12,15 +12,20 @@
 
 .search-bar input {
   padding: 8px 10px;
-  margin: 10px;
-  width: 300px; // 根据需要调整宽度
+  margin-left: 1rem;
+  width: 58vw;
   border: 1px solid #ccc;
-  border-radius: 4px;
+  border-radius: 0.25rem;
+  @include desktop {
+    font-size: 1.5rem;
+    width: 25vw;
+  }
 }
 
 .search-button {
-  width: 1.5rem;
-  height: 1.5rem;
+  padding-top: 5px;
+  width: 1.8rem;
+  height: 1.8rem;
   background: transparent;
   border: 0;
   color: black;
