--- a/src/pages/Recipe/Recipe.scss
+++ b/src/pages/Recipe/Recipe.scss
@@ -1,3 +1,27 @@
+@use "../../styles/globals.scss";
+@use "../../styles/partials/mixin.scss" as *;
+@use "../../styles/partials/variables.scss" as *;
+@use "../../styles/partials/typography.scss" as *;
 .recipe-container {
-  padding: 0 3rem;
+  padding: 5.5rem 1rem 0;
+
+  @include desktop {
+    padding: 7rem 3rem 0;
+  }
+}
+.cards-link {
+  text-decoration: none;
+}
+.recipe__header-wrapper {
+  display: flex;
+  @include desktop {
+    margin-top: 0.8rem;
+    justify-content: space-between;
+  }
+}
+.recipe__search-bar {
+  margin: 0.5rem 0;
+  @include desktop {
+    margin: 1rem 0 0;
+  }
 }
