--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -6,5 +6,5 @@ body {
   margin: 0;
   font-family: Jost, sans-serif;
   font-size: 0.875rem;
-  background-color: $Background-Light-grey;
+  background-color: $Primary-White;
 }
