--- a/src/styles/partials/variables.scss
+++ b/src/styles/partials/variables.scss
@@ -1,27 +1,26 @@
 // media breakpoints
 $mobile-breakpoint: 320px;
-$tablet-breakpoint: 768px;
 $desktop-breakpoint: 1280px;
 
 //Primary Colors
 $Primary-Black: #13182c;
-$Primary-Red: #e2003d;
+// button color
+$Primary-Orange: #ff4500;
 $Primary-Indigo: #2e66e5;
 $Primary-White: #ffffff;
 // Secondary Colors
+$Secondary-White: #ddd;
 $Secondary-Slate: #5c667e;
 $Secondary-Cloud: #bdc5d5;
+// button hover
+$Secondary-Orange: #e03e10;
+
 // Background Colors
 // top navigation header background, CTA button hover state background
 $Background-Graphite: #232940;
 //page background, table column header background, CTA background
 $Background-Light-grey: #f7f8f9;
 // Supporting Colors
-$Supporting-Green: #158463;
-$Supporting-Red: #c94515;
-
-//margins for mobile and tablet
-
-$mobile-margins-sides: 1rem;
-$tablet-margins-sides: 2rem;
-$desktop-margin-sides: 8rem;
+// button active
+$Supporting-Orange: #c92a00;
+$Supporting-Gray: #eaeaea;
